crates/aranya-policy-lang/tests/data/invalid_text/hex_length_1.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
error: Invalid string
  |
1 | let x = "a\x1"
  |           ^^^ hex character escape is too short
